--- a/style.css
+++ b/style.css
@@ -15,8 +15,12 @@ header {
   text-align: center;
   padding: 2rem 1rem;
   margin-bottom: 50px;
+  position:sticky;
+  top:0;
+  z-index: 1000;
+  box-shadow: 0 12px 32px rgba(0, 0, 0, 0.5);
+  
 }
-
 header h1 {
   margin: 0;
   font-size: 2.5rem;
@@ -173,7 +177,13 @@ ul {
   font-size: 1rem;
   margin: 0.5rem 0;
 }
-
+#tos a{
+  color:#fff;
+  text-decoration: none;
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 0.5rem;
+}
 
 
 .carousel {
